--- a/Independent Study/Independent Study.csproj
+++ b/Independent Study/Independent Study.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Worker\MessageWorker.cs" />
+    <Compile Include="Worker\ParseHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
